--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,10 @@
-# IDE
-.idea
-.vscode
-
-# Vendoring
-vendor
-
-# tempfiles
-.DS_Store
-*~
-.cache
-
-temp
-tmp
-
-# binary
-bin/
-release/
-
-# coverage
-coverage.txt
-coverage.html
-
-# testing
-cmd/test
-/plugins/
-testfile
-
-# misc
-.neofs-cli.yml
-
-# debhelpers
-**/.debhelper
-# ignore test result files under any path
+# ignore test results
 **/log.html
 **/output.xml
 **/report.html
 **/dockerlogs*.tar.gz
+allure_results/*
+xunit_results.xml
 
 # ignore pycache under any path
 **/__pycache__
