[#2165] services/tree: Allow to set custom synchronization interval
Signed-off-by: Evgenii Stratonikov <e.stratonikov@yadro.com>

--- a/config/example/node.env
+++ b/config/example/node.env
@@ -35,6 +35,7 @@ NEOFS_TREE_CACHE_SIZE=15
 NEOFS_TREE_REPLICATION_CHANNEL_CAPACITY=32
 NEOFS_TREE_REPLICATION_WORKER_COUNT=32
 NEOFS_TREE_REPLICATION_TIMEOUT=5s
+NEOFS_TREE_SYNC_INTERVAL=1h
 
 # gRPC section
 ## 0 server
