[#2159] node: Add tree replication timeout configuration
Signed-off-by: Pavel Karpy <p.karpy@yadro.com>

--- a/config/example/node.env
+++ b/config/example/node.env
@@ -34,6 +34,7 @@ NEOFS_TREE_ENABLED=true
 NEOFS_TREE_CACHE_SIZE=15
 NEOFS_TREE_REPLICATION_CHANNEL_CAPACITY=32
 NEOFS_TREE_REPLICATION_WORKER_COUNT=32
+NEOFS_TREE_REPLICATION_TIMEOUT=5s
 
 # gRPC section
 ## 0 server
