[#2164] neofs-node: Allow to set reconnect interval
Signed-off-by: Evgenii Stratonikov <e.stratonikov@yadro.com>

--- a/config/example/node.env
+++ b/config/example/node.env
@@ -73,6 +73,7 @@ NEOFS_MORPH_RPC_ENDPOINT_1_PRIORITY=2
 # API Client section
 NEOFS_APICLIENT_DIAL_TIMEOUT=15s
 NEOFS_APICLIENT_STREAM_TIMEOUT=20s
+NEOFS_APICLIENT_RECONNECT_TIMEOUT=30s
 NEOFS_APICLIENT_ALLOW_EXTERNAL=true
 
 # Policer section
