--- a/config/example/node.yaml
+++ b/config/example/node.yaml
@@ -97,6 +97,7 @@ apiclient:
   dial_timeout: 15s  # timeout for NEOFS API client connection
   stream_timeout: 20s # timeout for individual operations in a streaming RPC
   allow_external: true # allow to fallback to addresses in `ExternalAddr` attribute
+  reconnect_timeout: 30s # time to wait before reconnecting to a failed node
 
 policer:
   head_timeout: 15s  # timeout for the Policer HEAD remote operation
