Rename to frostfs
Signed-off-by: Yulia Kovshova <y.kovshova@yadro.com>

--- a/pytest_tests/pytest.ini
+++ b/pytest_tests/pytest.ini
@@ -13,7 +13,7 @@ markers =
 #   functional markers
     container: tests for container creation
     grpc_api: standard gRPC API tests
-    grpc_control: tests related to using neofs-cli control commands
+    grpc_control: tests related to using frostfs-cli control commands
     grpc_object_lock: gRPC lock tests
     http_gate: HTTP gate contract
     s3_gate: All S3 gate tests
@@ -25,7 +25,7 @@ markers =
     s3_gate_tagging: Tagging S3 gate tests
     s3_gate_versioning: Versioning S3 gate tests
     long: long tests (with long execution time)
-    node_mgmt: neofs control commands
+    node_mgmt: frostfs control commands
     session_token: tests for operations with session token
     static_session: tests for operations with static session token
     bearer: tests for bearer tokens
@@ -40,6 +40,6 @@ markers =
     failover_network: tests for network failure
     failover_reboot: tests for system recovery after reboot of a node
     add_nodes: add nodes to cluster
-    check_binaries: check neofs installed binaries versions
+    check_binaries: check frostfs installed binaries versions
     payments: tests for payment associated operations
     load: performance tests
